Adicionando download de apk no menu sidebar.

--- a/app/roles.html
+++ b/app/roles.html
@@ -123,6 +123,12 @@
                         stroke="currentColor" stroke-width="2">
                         <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
                     </svg></span><span class="nav-text">Permissões</span></a>
+            <a href="download.html" class="nav-item"><span class="nav-icon"><svg viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                        <polyline points="7 10 12 15 17 10" />
+                        <line x1="12" y1="15" x2="12" y2="3" />
+                    </svg></span><span class="nav-text">Download</span></a>
         </nav>
 
         <div class="sidebar-footer">
