--- a/app/perdas.html
+++ b/app/perdas.html
@@ -90,6 +90,14 @@
                     </svg></span>
                 <span class="nav-text">Locais</span>
             </a>
+            <a href="download.html" class="nav-item">
+                <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
+                        <polyline points="7 10 12 15 17 10" />
+                        <line x1="12" y1="15" x2="12" y2="3" />
+                    </svg></span>
+                <span class="nav-text">Download</span>
+            </a>
             <a href="usuarios.html" class="nav-item">
                 <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
