--- a/app/lojas.html
+++ b/app/lojas.html
@@ -91,6 +91,19 @@
                     </svg></span>
                 <span class="nav-text">Locais</span>
             </a>
+            <a href="usuarios.html" class="nav-item">
+                <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
+                        <circle cx="9" cy="7" r="4" />
+                    </svg></span>
+                <span class="nav-text">Usuários</span>
+            </a>
+            <a href="roles.html" class="nav-item">
+                <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+                    </svg></span>
+                <span class="nav-text">Permissões</span>
+            </a>
             <a href="download.html" class="nav-item">
                 <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4" />
@@ -98,13 +111,6 @@
                         <line x1="12" y1="15" x2="12" y2="3" />
                     </svg></span>
                 <span class="nav-text">Download</span>
-            </a>
-            <a href="usuarios.html" class="nav-item">
-                <span class="nav-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" />
-                        <circle cx="9" cy="7" r="4" />
-                    </svg></span>
-                <span class="nav-text">Usuários</span>
             </a>
         </nav>
 
